--- a/EduTest/Base.lproj/Main.storyboard
+++ b/EduTest/Base.lproj/Main.storyboard
@@ -30,21 +30,81 @@
             </objects>
             <point key="canvasLocation" x="863" y="-833"/>
         </scene>
-        <!--View Controller-->
+        <!--ContentVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="EduTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ContentVC" customModule="EduTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bSJ-pq-ZkO">
-                                <rect key="frame" x="166" y="241" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Titulo de la leccion" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RtY-a6-yo8">
+                                <rect key="frame" x="11" y="81" width="352" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="tMJ-XM-kWv">
+                                <rect key="frame" x="16" y="146" width="345" height="501"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="lectura" rowHeight="421" id="C8q-f5-mGU" customClass="LectureCell" customModule="EduTest" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="345" height="421"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="C8q-f5-mGU" id="uiw-mr-DTZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="345" height="420.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtitulo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sih-mv-tqS">
+                                                    <rect key="frame" x="0.0" y="0.0" width="345" height="26.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" keyboardDismissMode="onDrag" editable="NO" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="2ey-pt-Hxq">
+                                                    <rect key="frame" x="0.0" y="34.5" width="345" height="216"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="216" id="RwX-m8-P1f"/>
+                                                    </constraints>
+                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UEf-9V-72v">
+                                                    <rect key="frame" x="52" y="258" width="240" height="128"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="128" id="1Fd-wm-khd"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Sih-mv-tqS" firstAttribute="top" secondItem="uiw-mr-DTZ" secondAttribute="top" id="0XW-DW-av0"/>
+                                                <constraint firstItem="UEf-9V-72v" firstAttribute="top" secondItem="2ey-pt-Hxq" secondAttribute="bottom" constant="7.5" id="2W7-W8-C7g"/>
+                                                <constraint firstItem="2ey-pt-Hxq" firstAttribute="leading" secondItem="uiw-mr-DTZ" secondAttribute="leading" id="HpX-sa-7Sj"/>
+                                                <constraint firstItem="Sih-mv-tqS" firstAttribute="leading" secondItem="uiw-mr-DTZ" secondAttribute="leading" id="KOd-Ki-jev"/>
+                                                <constraint firstItem="2ey-pt-Hxq" firstAttribute="top" secondItem="Sih-mv-tqS" secondAttribute="bottom" constant="8" id="SDE-TH-8q9"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="UEf-9V-72v" secondAttribute="bottom" constant="24" id="TSJ-9j-npA"/>
+                                                <constraint firstItem="UEf-9V-72v" firstAttribute="leading" secondItem="uiw-mr-DTZ" secondAttribute="leadingMargin" constant="37" id="XR7-Hu-p3v"/>
+                                                <constraint firstAttribute="trailing" secondItem="2ey-pt-Hxq" secondAttribute="trailing" id="dRb-BN-aDF"/>
+                                                <constraint firstAttribute="trailing" secondItem="Sih-mv-tqS" secondAttribute="trailing" id="p1a-eN-frh"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="UEf-9V-72v" secondAttribute="trailing" constant="38" id="wZQ-fl-YhR"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="imagen" destination="UEf-9V-72v" id="gUk-rf-3B2"/>
+                                            <outlet property="subtitulo" destination="Sih-mv-tqS" id="YG2-mi-zYK"/>
+                                            <outlet property="texto" destination="2ey-pt-Hxq" id="riZ-7Q-Fdo"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="Dg8-bS-zkR"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ric-L8-Lr7"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
@@ -57,7 +117,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <swipeGestureRecognizer direction="right" id="CVr-cP-2DA"/>
             </objects>
-            <point key="canvasLocation" x="2278" y="28"/>
+            <point key="canvasLocation" x="2261.5999999999999" y="-861.3193403298352"/>
         </scene>
         <!--MenuVC-->
         <scene sceneID="VRx-Nq-iqJ">
